...
                android:id="@+id/imageView_article_icon"
                android:layout_width="80dp"
                android:layout_height="80dp"
                app:srcCompat="@drawable/ic_favorite"/>

            <TextView
                android:id="@+id/textView_article_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:maxLines="4"
                tools:text="Awesome news for the feed"/>

...

            </LinearLayout>

        </LinearLayout>

        <ImageView
            android:id="@+id/imageView_article_favourite_indicator"
            android:layout_width="@dimen/favourite_button_size"
            android:layout_height="@dimen/favourite_button_size"
            background="?android:selectableItemBackgroundBorderless"
            app:srcCompat="@drawable/ic_favorite"/>

    </LinearLayout>
...
