<resources>
    <string name="app_name">RssReader</string>

    <string name="empty_list_feed">Create new feed</string>
    <string name="feed_search_nothing_found">Nothing found</string>
    <string name="feed_search_add_new_feed">Search new feed</string>

    <string name="NEW">NEW</string>
    <string name="feed_url">Feed URL</string>
    <string name="add">Add</string>

    <string name="please_check_internet_connection_message">Please check your internet connection</string>

    <string name="looks_like_you_need_a_feed_to_read">Looks like you need a feed to read</string>
    <string name="already_subscribed_message">You are already subscribed to this feed dummy :)</string>
    <string name="incorrect_feed_url_message">Incorrect feed URL, please check and try again</string>

    <string name="notification_channel_feed_sync_name">Feed sync</string>

    <string name="notification_feed_updated_title">New articles!</string>
    <string name="notification_feed_updated_text">You have %1$s new articles. %2$s articles unread</string>

    <string name="notification_feed_sync_update_title">Syncing feeds</string>
    <string name="notification_feed_sync_update_text">%1$s feed updated from %2$s</string>

    <string name="notification_feed_sync_done_title">Syncing complete</string>
    <string name="notification_feed_sync_done_text">%1$s new articles</string>

    //feed list appbar menu
    <string name="notifications_toggle_menu">Toggle notifications</string>
    <string name="show_favourites_menu">Show favourites articles</string>
    <string name="menu_settings">Settings</string>

    <string name="message_no_network">Check network connection</string>
    <string name="message_unknown">Unknown error happen</string>
    <string name="message_feed_already_subscribed">You are already subscribed to this feed</string>
    <string name="message_incorrect_feed_url">Incorrect feed URL, please check and try again</string>

    //Feed
    <string name="dialog_message_delete_feed">Are you want to delete feed %1$s ?</string>
    <string name="tooltip_notifications_toggle_menu_disable">Disable background updates</string>
    <string name="tooltip_notifications_toggle_menu_enable">Enable background updates</string>

    <string name="menu_popup_feed_list_delete">Delete</string>
    <string name="menu_popup_feed_list_info">Show details</string>

    <string name="snackbar_action_button_retry">Retry</string>
    <string name="snackbar_text_updated_articles">%1$s new articles</string>

    //Article
    <string name="toolbar_title_favourite_articles">Favourite articles</string>

    //New Feed Dialog
    <string name="dialog_new_feed_title">Add new feed</string>
    <string name="dialog_new_feed_button_positive">Add</string>
</resources>
