<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/menu_show_information"
        android:title="@string/menu_popup_feed_list_info" />

    <item
        android:id="@+id/menu_delete"
        android:title="@string/menu_popup_feed_list_delete" />
</menu>