...
                android:layout_height="wrap_content"
                tools:text="45" />

        </LinearLayout>

        <ImageButton
            android:id="@+id/imageButton_options_menu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_menu_overflow_light" />

    </LinearLayout>

...
